--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div style="flex: 1; min-width: 300px;">
         <div align="center">        
             <center><img src="symbol.png" alt="Logo" width="100" height="100"></center>
-            <h2 class="run">Pirate Code</h2>                
+            <h2 class="welcome">Pirate Code</h2>                
             <p class="description">The Pirate Code is a set of principles that describe who we are as pirates. These principles guide the way we see policy.</p>
             <button class="click-button"><a href="code.html">Learn More</a></button>
         </div>            
