--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
             <center><img src="logo.png" alt="Logo" width="100" height="100"></center>
             <h2 class="run">About Us</h2>                
             <p class="description">This page will allow you to learn more about the history of the NCPP and its association to the United States Pirate Party.</p>                
+                <div style="margin-top: 15px; margin-bottom: 15px;">                          
             <button class="click-button"><a href="about.html">Learn More</a></button>
-            <br><br>
+                </div>             
         </div>    
     </div>  
     <!-- Pirate Code -->
@@ -94,8 +95,9 @@
             <center><img src="symbol.png" alt="Logo" width="100" height="100"></center>
             <h2 class="welcome">Pirate Code</h2>                
             <p class="description">The Pirate Code is a set of principles that describe who we are as pirates. These principles guide the way we see policy.</p>
+                <div style="margin-top: 15px; margin-bottom: 15px;">              
             <button class="click-button"><a href="code.html">Learn More</a></button>
-            <br><br>
+                </div>             
         </div>            
     </div>
     <!-- Running For Office -->
@@ -104,8 +106,9 @@
             <center><img src="nclogo.png" alt="Logo" width="100" height="100"></center>
             <h2 class="run">Running For Office</h2>                
             <p class="description">Do you want to run for office or get an endorsement from the North Carolina Pirate Party? If so, then this page is for you!</p>
+                <div style="margin-top: 15px; margin-bottom: 15px;">  
             <button class="click-button"><a href="run-for-office.html">Learn More</a></button>
-            <br><br>
+                </div>             
         </div>         
     </div>
 </div>     
