Refactor HTML structure for services section

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
     </div>            
 <!-- Start of Services Page -->
     <div id="row-3" class="container-fluid row gy-0 gx-0">
-    <div align="center">
+        <div style="margin-top: 30px;">  
+            <div align="center">
         <h1 id="welcome">Our Services</h1>
-    </div>
+            </div>
+         </div>           
         <div class="container">
 <form action="https://formspree.io/f/xldvlwky" method="POST" style="max-width: 1200px; margin: 0 auto;">
 <div style="display: flex; gap: 20px; flex-wrap: wrap; justify-content: center;">
