--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div style="flex: 1; min-width: 300px;">
         <div align="center">        
             <center><img src="logo.png" alt="Logo" width="100" height="100"></center>
-            <h2 id="run">About Us</h2>                
+            <h2 id="welcome">About Us</h2>                
             <p class="description">This page will allow you to learn more about the history of the NCPP and its association to the United States Pirate Party.</p>                
                 <div style="margin-top: 15px; margin-bottom: 15px;">                          
             <button class="click-button"><a href="about.html">Learn More</a></button>
