--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
     <div style="flex: 1; min-width: 300px;">
         <div align="center">        
             <center><img src="logo.png" alt="Logo" width="100" height="100"></center>
-            <h2 id="welcome">About Us</h2>                
+        <div style="margin-top: 15px;">  
+            <h2 id="welcome">About Us</h1>
+        </div>                
             <p class="description">This page will allow you to learn more about the history of the NCPP and its association to the United States Pirate Party.</p>                
                 <div style="margin-top: 15px; margin-bottom: 15px;">                          
             <button class="click-button"><a href="about.html">Learn More</a></button>
@@ -95,7 +97,9 @@
     <div style="flex: 1; min-width: 300px;">
         <div align="center">        
             <center><img src="symbol.png" alt="Logo" width="100" height="100"></center>
-            <h2 class="welcome">Pirate Code</h2>                
+        <div style="margin-top: 15px;">  
+            <h2 id="welcome">Pirate Code</h1>
+        </div>                
             <p class="description">The Pirate Code is a set of principles that describe who we are as pirates. These principles guide the way we see policy.</p>
                 <div style="margin-top: 15px; margin-bottom: 15px;">              
             <button class="click-button"><a href="code.html">Learn More</a></button>
@@ -106,7 +110,9 @@
     <div style="flex: 1; min-width: 300px;">
         <div align="center">
             <center><img src="nclogo.png" alt="Logo" width="100" height="100"></center>
-            <h2 class="run">Running For Office</h2>                
+        <div style="margin-top: 15px;">  
+            <h2 id="welcome">Running For Office</h1>
+        </div>
             <p class="description">Do you want to run for office or get an endorsement from the North Carolina Pirate Party? If so, then this page is for you!</p>
                 <div style="margin-top: 15px; margin-bottom: 15px;">  
             <button class="click-button"><a href="run-for-office.html">Learn More</a></button>
