--- a/run-for-office.html
+++ b/run-for-office.html
@@ -67,7 +67,7 @@
 <!-- Start of Welcome Page -->
     <div id="row-4" class="container-fluid-1 row gy-0 gx-0">
         <h1 id="run">Run For Office</h1>
-            <h3 style="padding-left: 70px; padding-right: 70px; color: #">Candidates Wanted</h3>
+            <h2 id="run">Run For Office</h2>
         <p id="intro">Is open & accountable government important to you? Is the increasing militarization of police the 10th step too far? Tired of the same people in office election after election? Local government not meeting your needs?</p>
             <h3 style="padding-left: 70px; padding-right: 70px; color: #">Be a Pirate candidate!</h3>
         <p id="intro">Thousands of local offices are up for grabs every year. These elected officials oversee our tax rates, government spending, as well as make laws that limit competition, subsidize big companies, hide what what the government is doing, or make it easier for the police to spy on us.</p>
