--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,9 @@
 <!-- Start of Welcome Page -->
     <div id="row-4" class="container-fluid-1 row gy-0 gx-0">
       <div align="center">
-        <h1 id="run">Sign Up If You Want To Be A Pirate</h1>      
+        <div style="margin-top: 30px;">    
+            <h1 id="run">Sign Up If You Want To Be A Pirate</h1>
+        </div>     
       </div> 
     <div id="row-4" class="container-fluid-2 row gy-0 gx-0">        
       <div align="center">
