--- a/meet-the-candidates.html
+++ b/meet-the-candidates.html
@@ -66,7 +66,9 @@
     </nav>        
 <!-- Start of Welcome Page -->
     <div id="row-4" class="container-fluid-1 row gy-0 gx-0">
-        <h1 id="run">MEET THE CANDIDATES!</h1>
+        <div style="margin-top: 30px;">    
+            <h1 id="run">MEET THE CANDIDATES!</h1>
+        </div>                
             <h3 style="padding-left: 70px; padding-right: 70px; color: #">2025</h3>
         <p id="intro">To Be Determined</p>
     </div>
