--- a/run-for-office.html
+++ b/run-for-office.html
@@ -71,7 +71,7 @@
         </div>          
             <h2 id="run">Candidates Wanted</h2>
         <p id="intro">Is open & accountable government important to you? Is the increasing militarization of police the 10th step too far? Tired of the same people in office election after election? Local government not meeting your needs?</p>
-            <h3 style="padding-left: 70px; padding-right: 70px; color: #">Be a Pirate candidate!</h3>
+            <h2 id="run">Be a Pirate Candidate!</h2>
         <p id="intro">Thousands of local offices are up for grabs every year. These elected officials oversee our tax rates, government spending, as well as make laws that limit competition, subsidize big companies, hide what what the government is doing, or make it easier for the police to spy on us.</p>
         <p id="intro">These races can be won and we want to help you succeed. Getting on the ballot is easy, and winning is in sight. If not you, who; if not now, when? Pirates are the everyday, working class man and woman. We represent real people. Fit the bill? Shoot us an email at northcarolinapirateparty@gmail.com</p>
     </div>
